quick update to README

--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-Note: cujo.js now requires dojo 1.5.0 or higher
+Head over to the wiki for an introduction before diggin in.
+
+[[cujo.js wiki|http://github.com/unscriptable/cujo/wiki]]
+
+Note: cujo.js requires dojo 1.5.0 or higher
