Warn githubbers that this is not cujo.js!

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+WHOA THERE. This is *not* the cujo.js you're looking for.  You want this one: http://cujojs.com
+
+Now get out of here.  Go away. Click that link. Now.
+
+------------------------------------------------
+
 cujo is being totally reworked for version 0.2.
 
 For easier adoption and increased flexibility, we have two new goals:
